add optional passing of game settings
